<?xml version="1.0"?>
<package format="2">
  <name>srd20_simulation_gazebo</name>
  <version>0.0.0</version>
  <description>Schanzer Racing Driverless gazebo test package</description>
  <maintainer email="leonce.mollerus@schanzer-racing.de">Leonce Mollerus</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
  </export>
</package>
